# Marathon-Shell

./: .clang-format  .gitignore  APKBUILD  CMakeLists.txt  CONTRIBUTING.md  README.md  diagnostics.qml
.github/workflows/: format.yml
apps/browser/: BrowserApp.qml
apps/calculator/: CalculatorApp.qml
apps/calendar/: CalendarApp.qml
apps/camera/: CameraApp.qml
apps/clock/: ClockApp.qml
apps/gallery/: GalleryApp.qml
apps/maps/: MapsApp.qml
apps/messages/: MessagesApp.qml
apps/music/: MusicApp.qml
apps/notes/: NotesApp.qml
apps/phone/: PhoneApp.qml
apps/settings/: SettingsApp.qml
apps/store/: StoreApp.qml
apps/template/: TemplateApp.qml
apps/terminal/: TerminalApp.qml
apps/test/: TestApp.qml
docs/: ARCHITECTURE.md  DEVELOPMENT_WORKFLOW.md
marathon-core/src/: marathonappregistry.cpp  marathonappregistry.h  marathonappverifier.cpp
marathon-keyboard/src/: marathoninputmethodengine.h  marathonkeyboardime.h
marathon-ui/Containers/: MApp.qml  MCard.qml  MFormCard.qml  MFormField.qml  MLayer.qml  MListItem.qml  MListTile.qml  MPage.qml  MPanel.qml  MPullToRefresh.qml  MScrollView.qml  MSection.qml  MSectionHeader.qml  MSettingsListItem.qml  MSwipeDelegate.qml
marathon-ui/Controls/: MCheckbox.qml  MComboBox.qml  MDropdown.qml  MRadioButton.qml  MRadioGroup.qml  MSlider.qml  MToggle.qml
marathon-ui/Core/: Icon.qml  MBreakpoints.qml  MButton.qml  MCircularIconButton.qml  MContainer.qml  MDateTimePicker.qml  MEmptyState.qml  MGrid.qml  MIconButton.qml  MImageButton.qml  MLabel.qml  MResponsive.qml  MTextArea.qml  MTextInput.qml
marathon-ui/Effects/: MHaptics.qml  MRipple.qml
marathon-ui/Feedback/: MActivityIndicator.qml  MBadge.qml  MProgressBar.qml
marathon-ui/Lists/: MDivider.qml
scripts/: test-build.sh  test-notification.sh
shell/: CMakeLists.txt  main.cpp  resources.qrc
shell/protocols/: ext-session-lock-v1-client-protocol.h  ext-session-lock-v1-protocol.c  wlr-layer-shell-unstable-v1-client-protocol.h  wlr-layer-shell-unstable-v1-protocol.c
shell/qml/: Main.qml  MarathonShell.qml
shell/qml/apps/native/: NativeAppWindow.qml
shell/qml/apps/template/: TemplateApp.qml
shell/qml/components/: AppContextMenu.qml  BackGestureIndicator.qml  BluetoothPairDialog.qml  ClipboardManager.qml  CompositorConnections.qml  ConnectionToast.qml  EdgeGestures.qml  ErrorToast.qml  GestureArea.qml  IncomingCallOverlay.qml  MarathonAlarmOverlay.qml  MarathonAppGrid.qml  MarathonAppWindow.qml  MarathonBottomBar.qml  MarathonHub.qml  MarathonLockScreen.qml  MarathonMessagingHub.qml  MarathonNavBar.qml  MarathonOOBE.qml  MarathonPageView.qml  MarathonPeek.qml  MarathonPinScreen.qml  MarathonQuickSettings.qml  MarathonSearch.qml  MarathonStatusBar.qml  MarathonTaskSwitcher.qml  MediaPlaybackManager.qml  NotificationToast.qml  PermissionDialog.qml  PowerMenu.qml  QuickSettingsTile.qml  SafeAppLoader.qml  ScreenshotPreview.qml  ShareSheet.qml  ShellInitialization.qml  SystemHUD.qml  VirtualKeyboard.qml  WaylandShellSurfaceItem.qml  WiFiPasswordDialog.qml
shell/qml/components/navigation/: InertiaNavBar.qml
shell/qml/components/ui/: Button.qml  ConfirmDialog.qml  Input.qml  ListPickerModal.qml  Modal.qml  PageIndicator.qml  StorageDetailsModal.qml  TextInputModal.qml
shell/qml/core/: Constants.qml  Logger.qml  Router.qml
shell/qml/keyboard/Core/: MarathonKeyboard.qml
shell/qml/keyboard/Data/: AutoCorrect.qml  Dictionary.qml  DomainSuggestions.qml  WordEngine.cpp  WordEngine.h
shell/qml/keyboard/Input/: InputContext.qml
shell/qml/keyboard/Layouts/: EmailLayout.qml  EmojiLayout.qml  NumberLayout.qml  PhoneLayout.qml  QwertyLayout.qml  SymbolLayout.qml  UrlLayout.qml
shell/qml/keyboard/UI/: Key.qml  LongPressPopup.qml  PredictionBar.qml  ToolBar.qml
shell/qml/models/: FilteredAppModel.qml
shell/qml/services/: AlarmManager.qml  AmbientLightSensor.qml  AppLaunchService.qml  AppLauncher.qml  AppLifecycleManager.qml  AudioManager.qml  CellularManager.qml  ClipboardService.qml  DeepLinkHandler.qml  DesktopEntryParser.qml  DesktopFileParser.qml  DisplayManager.qml  FlashlightManager.qml  HapticService.qml  LocationService.qml  NavigationRouter.qml  NetworkManager.qml  NotificationHandler.qml  NotificationService.qml  Platform.qml  PowerBatteryHandler.qml  PowerManager.qml  ProximitySensor.qml  ScreenshotService.qml  ServiceBus.qml  SessionManager.qml  StateManager.qml  StatusBarIconService.qml  TelephonyIntegration.qml  TelephonyManager.qml  UnifiedSearchService.qml  WindowManager.qml
shell/qml/stores/: AppStore.qml  SessionStore.qml  SystemControlStore.qml  SystemStatusStore.qml  UIStore.qml  WallpaperStore.qml
shell/qml/utils/: Async.qml
shell/src/: appmodel.cpp  appmodel.h  audiomanagercpp.cpp  audiomanagercpp.h  audiomanagercpp_new.cpp  audioroutingmanager.cpp  audioroutingmanager.h  bluetoothagent.cpp  bluetoothagent.h  bluetoothmanager.cpp  bluetoothmanager.h  callhistorymanager.cpp  callhistorymanager.h  contactsmanager.cpp  contactsmanager.h  crashhandler.cpp  crashhandler.h  desktopfileparser.cpp  desktopfileparser.h  displaymanagercpp.cpp  displaymanagercpp.h  hapticmanager.cpp  hapticmanager.h  locationmanager.cpp  locationmanager.h  marathonappinstaller.cpp  marathonappinstaller.h  marathonapploader.cpp  marathonapploader.h  marathonapppackager.cpp  marathonapppackager.h  marathonappprocess.cpp  marathonappprocess.h  marathonappscanner.cpp  marathonappscanner.h  marathonappstoreservice.cpp  marathonappstoreservice.h  marathonappverifier.h  marathoninputmethodengine.cpp  marathonkeyboardime.cpp  (+45 more)
shell/src/dbus/: freedesktopnotifications.cpp  freedesktopnotifications.h  marathonapplicationservice.cpp  marathonapplicationservice.h  marathonnotificationservice.cpp  marathonnotificationservice.h  marathonpermissionportal.cpp  marathonpermissionportal.h  marathonsettingsservice.cpp  marathonsettingsservice.h  marathonstorageservice.cpp  marathonstorageservice.h  marathonsystemservice.cpp  marathonsystemservice.h  notificationdatabase.cpp  notificationdatabase.h
tests/: test_apppackager.cpp  test_appverifier.cpp  test_permissionmanager.cpp
(+111 files in other folders)
